--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/pupungeggang4/Web-AutoCardBattle.git"
   },
   "author": "pupungeggang4",
-  "license": "ISC",
+  "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/pupungeggang4/Web-AutoCardBattle/issues"
   },
